# study

./: K-MOOC 생성형 인공지능.md  단수 & 복수 구분.md  아무거나.md  프로세스 & 스레드.md
algorithm/: memo.txt  test.py
algorithm/baekjoon/: 13417_카드_문자열.py  13460_구슬_탈출_2.py  16934_게임_닉네임.py  20924_트리의_기둥과_가지.py  2176_합리적인_이동경로.py  22865_가장_먼_곳.py  2560_짚신벌레.py  9177_단어_섞기.py
algorithm/lg_cns/: 회전변환.py
algorithm/lg_cns/baekjoon/: 10816_숫자_카드2.py  1197_최소_스패닝_트리.py  14500_테트로미노.py  14503_로봇_청소기.py  1654_랜선_자르기.py  17298_오큰수.py  1834_나머지와_몫이_같은_수.py  1920_수_찾기.py  23352_방탈출.py  2578_빙고.py  2812_크게_만들기.py
algorithm/lg_cns/programmers/: 요격_시스템.py  정수를_나선형으로_배치하기.py  피로도.py  피로도_순열버전.py  할인행사.py
algorithm/since240523/baekjoon/: 10828_스택.py  1300_K번째_수.py  15481_그래프와_MST.py  1918_후위_표기식.py  2110_공유기_설치.py  2493_탑.py  2805_나무_자르기.py  6198_육상_정원_꾸미기.py
compiler/compiler/: main.cpp
compiler/compiler/ast/: ast.cpp  ast.h
compiler/compiler/lexer/: lexer.cpp  lexer.h
compiler/compiler/parser/: parser.cpp  parser.h
lambda/: lambda.py  lambda_calculus.md  test.py
making_compiler/: compiler.md
network/: summary.md
python/project/networking/: pyproject.toml  test.py
self_studying_ca_and_os/: summary.md
리눅스/: dwm설치.md
문제해결/: 캡스톤.md  컴파일러.md
